# OpenAssetGraph

./: .gitignore  DEVELOPMENT_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  OAG.md  QUICKSTART.md  README.md  README_CN.md  docker-compose.yml  push-to-github.bat  start-backend.bat  start-frontend.bat  start-frontend.ps1
.github/workflows/: ci.yml
.trae/documents/: OAG项目系统性开发实施计划.md
.trae/specs/add-project-page/: checklist.md  spec.md  tasks.md
.trae/specs/enhance-storage-and-reference/: checklist.md  spec.md  tasks.md
.trae/specs/fix-ai-chat-500-error/: checklist.md  spec.md  tasks.md
.trae/specs/fix-api-connection/: checklist.md  spec.md  tasks.md
.trae/specs/fix-startup-issues/: checklist.md  spec.md  tasks.md
backend/: .env.example  .env.production  Dockerfile  init_sample_data.py  pyproject.toml  requirements.txt  test_api.py  test_api_8005.py  test_api_full.py  test_api_simple.py  test_chat.py  test_chat_api.py  test_chat_sync.py  test_env.py  test_glm.py  test_llm.py  test_llm_direct.py  test_llm_test.py  test_output.txt  test_results.txt
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  projects.py  scan.py  topology.py
backend/app/core/: config.py
backend/app/models/: graph.py
backend/app/services/: ai_architect.py  github_service.py  graph_service.py  mock_data.py  project_reference.py  scan_service.py  topology_service.py
backend/app/services/analyzers/: __init__.py  dependency_analyzer.py  fortran_analyzer.py  go_analyzer.py  infra_analyzer.py  source_analyzer.py
backend/app/services/llm/: __init__.py  base.py  graph_rag.py  llm_factory.py  openai_service.py  prompt_manager.py
backend/app/services/parsers/: base.py  java_parser.py  python_parser.py
backend/app/services/scanners/: __init__.py  base.py  postgres_scanner.py
backend/scripts/: import_mall_project.py
backend/tests/: test_chat_project_reference.py  test_graph_service_error_handling.py  test_main.py  test_postgres_scanner.py  test_project_reference.py  test_topology_api.py
frontend/: .eslintrc.cjs  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
nginx/: nginx.conf
scripts/: init_neo4j.cypher  init_postgres.sql
(+18 files in other folders)
